# triangular-euler-solvers

./: .gitignore  CMakeLists.txt  main.cpp
CMAKE_MODULES/: FindMKL.cmake
FirstOrderSolver/: HLLC.cpp  HLLC.h  LaxFriedrichSolver.cpp  LaxFriedrichSolver.h  RoeSolver.cpp  RoeSolver.h  Solver.cpp  Solver.h
HYBRID/: HYBRIDSolver.cpp  HYBRIDSolver.h
Maths/: Algebra.cpp  Algebra.h
SpaceMesh/: Area.cpp  Area.h  TriangularMesh.cpp  TriangularMesh.h
WENO/: CWENOSolver.cpp  CWENOSolver.h  GWENOSolver.cpp  GWENOSolver.h  WENOLF.cpp  WENOLF.h  WENOSolver.cpp  WENOSolver.h
lib_source/armadillo-8.100.0/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libarmadillo.8.10.0.dylib  libarmadillo.8.dylib  libarmadillo.dylib
lib_source/armadillo-8.100.0/include/armadillo_bits/: config.hpp
lib_source/armadillo-8.100.0/tmp/include/armadillo_bits/: config.hpp
lib_source/armadillo-8.100.0/tmp/misc/: armadillo.pc
lib_source/armadillo-8.200.0/: README.txt
lib_source/fade2d/include/: Bbox2.h  Color.h  ConstraintGraph2.h  ConstraintSegment2.h  Edge2.h  Fade_2D.h  License.h  MeshGenParams.h  MsgBase.h  Point2.h  Publisher.h  SegmentChecker.h  Triangle2.h  UserPredicates.h  Visualizer2.h  Zone2.h  freeFunctions.h  testDataGenerators.h
lib_source/lib/: libfade2d.dylib
lib_source/lib/fade2d_win64/: fade2D_x64_v141_Debug.exp  fade2D_x64_v141_Debug.lib  fade2D_x64_v141_Release.exp  fade2D_x64_v141_Release.lib
